# GDPVal_Eval

./: .gitignore  README.md  evaluate.py  pyproject.toml  requirements.txt  run_submission.py
gdpval/: __init__.py
gdpval/agent/: __init__.py  runner.py
gdpval/dataset/: __init__.py  loader.py
gdpval/elo/: __init__.py  bootstrap.py  bradley_terry.py
gdpval/grading/: __init__.py  pairwise_grader.py  sampling.py
gdpval/intelligence_index/: __init__.py  normalize.py
gdpval/submission/: __init__.py  client.py  prompt.py
results/: sample_evaluation.json
tests/: test_agent_runner.py  test_bootstrap.py  test_bradley_terry.py  test_client.py  test_dataset_loader.py  test_evaluate.py  test_intelligence_index.py  test_pairwise_grader.py  test_prompt.py  test_sampling.py
